# HistoricHarpsichord

./: Makefile.am  README.md  configure.ac  historicHarpsichord.appdata.xml.in
docs/: DESIGN  Makefile.am  historicHarpsichord-manual.html  historicHarpsichordmanual.lyx  make  mycustomfils.xsl
docs/reference/: Makefile.am
docs/reference/historicHarpsichord/: Makefile.am  historicHarpsichord-docs.xml
include/historicHarpsichord/: historicHarpsichord.h  historicHarpsichord_types.h
pixmaps/: Makefile.am
po/: LINGUAS  POTFILES.in
soundfonts/: Makefile.am
src/: Makefile.am
src/audio/: audiointerface.c  audiointerface.h  dummybackend.c  dummybackend.h  eventqueue.c  eventqueue.h  fluid.c  fluid.h  midi.c  midi.h  portaudiobackend.c  portaudiobackend.h  portaudioutil.c  portaudioutil.h  portmidibackend.c  portmidibackend.h  portmidiutil.c  portmidiutil.h  temperament.c  temperament.h
src/core/: main.c  prefops.c  prefops.h  utils.c  utils.h
src/ui/: prefdialog.c
