pixmapsdir = $(datadir)/historicHarpsichord/pixmaps
pixmaps_DATA = 

icondir=$(datadir)/pixmaps
icon_DATA=$(srcdir)/historicHarpsichord.png

desktopdir = $(datadir)/applications
desktop_DATA = historicHarpsichord.desktop

EXTRA_DIST = $(pixmaps_DATA) $(icon_DATA) $(desktop_DATA)
CLEANFILES = *~ #*#
